--- a/public/fonts/Rubik/index.html
+++ b/public/fonts/Rubik/index.html
@@ -11,7 +11,7 @@
             }
 
             .sample {
-                font-family: 'Roboto-Regular';
+                font-family: 'Rubik-Light';
                 font-size: 24px;
                 border: 1px solid #ddd;
                 display: inline-block;
